# LiftoffSimulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
LidarMod/LiftoffLidar/: LiftoffLidar.csproj  Plugin.cs  Plugin.new
include/: joystick.h  lf_telemetry.h
src/: joystick.c  lf_telemetry.c  main.c
unocontroller/: Makefile
unocontroller/src/: main.cpp
